Lab submission Implementation of Numpy by Fee

--- a/Implementaton of Numpy.ipynb
+++ b/Implementaton of Numpy.ipynb
@@ -26,11 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "f6ey4hZmBYoe"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 2.2.2 version of numpy!!!\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print(\"Loaded\", np.__version__, \"version of numpy!!!\")"
@@ -49,11 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "69_hyreHan2i"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var1 = [1 2 3 4 5]\n",
+      "var2 = [[1 2 3 4 5]\n",
+      " [6 7 8 9 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# creating a 1 dimensional array\n",
     "var1 = np.array([1, 2, 3, 4, 5])\n",
@@ -68,11 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "-BsQcnkzfUnw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var3 = [1. 2. 3.]\n",
+      "var4 = [1 2 3]\n",
+      "var5 = [1.+0.j 2.+0.j 3.+0.j]\n"
+     ]
+    }
+   ],
    "source": [
     "# It is also possible to specify the type of the element during array creation\n",
     "var3 = np.array([1, 2, 3], dtype=np.float32)\n",
@@ -104,11 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "-_R08BJ7djMc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64 \t (5,) \t 5 \t 1\n",
+      "int64 \t (2, 5) \t 10 \t 2\n",
+      "float32 \t (3,) \t 3 \t 1\n",
+      "int32 \t (3,) \t 3 \t 1\n",
+      "complex128 \t (3,) \t 3 \t 1\n"
+     ]
+    }
+   ],
    "source": [
     "print(var1.dtype, '\\t', var1.shape, '\\t', var1.size, '\\t', var1.ndim)\n",
     "print(var2.dtype, '\\t', var2.shape, '\\t', var2.size, '\\t', var2.ndim)\n",
@@ -134,13 +174,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "88Gce1SwjCOO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var_zero= [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "var_zero type= float64\n",
+      "var_ones= [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "var_ones type= float64\n",
+      "var_empty= [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "var_empty type= float64\n",
+      "var_zeroslike= 0\n",
+      "var_zeroslike type= int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution\n"
+    "# Solution\n",
+    "var_zero = np.zeros(8)\n",
+    "print(\"var_zero=\", var_zero)\n",
+    "print(\"var_zero type=\", var_zero.dtype)\n",
+    "\n",
+    "var_ones = np.ones(8)\n",
+    "print(\"var_ones=\", var_ones)\n",
+    "print(\"var_ones type=\", var_ones.dtype)\n",
+    "\n",
+    "var_empty = np.empty(8)\n",
+    "print(\"var_empty=\", var_empty)\n",
+    "print(\"var_empty type=\", var_empty.dtype)\n",
+    "\n",
+    "var_zeroslike = np.zeros_like(8)\n",
+    "print(\"var_zeroslike=\", var_zeroslike)\n",
+    "print(\"var_zeroslike type=\",var_zeroslike.dtype)\n"
    ]
   },
   {
@@ -166,7 +236,9 @@
     "\n",
     "*(Double-click or enter to edit)*\n",
     "\n",
-    "..."
+    "zeros is setting a 0 as default whereas empty sets a 1 as default.\n",
+    "\n",
+    "You uzse arange and linespace function to create an array of a defined range (arange: defined range where you givt a start and a stop and a stepper), (linespace: you give a start and a stop and the total number of elements that is equally spread around the range)"
    ]
   },
   {
@@ -180,11 +252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "D5acQVQWqKUC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "[[[0 1 2 3 4]\n",
+      "  [5 6 7 8 9]]]\n",
+      "[[[0 1 2 3 4]\n",
+      "  [5 6 7 8 9]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a numpy array using arrange function\n",
     "var6 = np.arange(10, dtype=int)\n",
@@ -225,7 +311,7 @@
     "\n",
     "*(Double-click or enter to edit)*\n",
     "\n",
-    "..."
+    "With reshape() the original data is not modified, whereas with resize() it is."
    ]
   },
   {
@@ -241,11 +327,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "id": "P-CZ_trPhBwH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[1 2]\n"
+     ]
+    }
+   ],
    "source": [
     "var7 = np.array([1, 2, 3, 4, 5])\n",
     "\n",
@@ -259,11 +354,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "aTpnDW7qhpZX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# it is also possible to slice arrays based on a condition\n",
     "print(var7[var7 % 2 == 0])  # prints all the even numbers in the array"
@@ -271,11 +374,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "MP7Z7Zsikeaf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "5\n",
+      "[4 5 6]\n",
+      "[2 5 8]\n",
+      "[[1 2]\n",
+      " [4 5]]\n"
+     ]
+    }
+   ],
    "source": [
     "var8 = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
     "print(var8)\n",
@@ -326,18 +444,35 @@
     "\n",
     "*(Double-click or enter to edit)*\n",
     "\n",
-    "..."
+    "with a non-zero fucntion we extract the values that are not zero."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "id": "07q5D1ygiblJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 0]\n",
+      " [0 4 5 6]\n",
+      " [7 0 8 9]]\n",
+      "(array([0, 0, 0, 1, 1, 1, 2, 2, 2]), array([0, 1, 2, 1, 2, 3, 0, 2, 3]))\n"
+     ]
+    }
+   ],
    "source": [
-    "# solution"
+    "# solution\n",
+    "\n",
+    "var_non_zero = np.array([[1, 2, 3, 0], [0, 4, 5, 6], [7, 0, 8, 9]])\n",
+    "indices = np.nonzero(var_non_zero)\n",
+    "print(var_non_zero)\n",
+    "\n",
+    "print(indices)\n"
    ]
   },
   {
@@ -351,11 +486,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "id": "trCOmdaxz3L6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[4 5 6]\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "var9 = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "\n",
@@ -369,11 +519,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "yiSVVSTpyoZI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# an alternative to the nesting for loop is the nditer function\n",
     "var10 = np.array([[1, 2, 3], [4, 5, 6]])\n",
@@ -403,7 +566,7 @@
     "\n",
     "*(Double-click or enter to edit)*\n",
     "\n",
-    "..."
+    "with the function enumerate()"
    ]
   },
   {
@@ -419,11 +582,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "id": "wMJMuZTps94q"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before changing: [1 2 3]\n",
+      "after changing: [4 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "var11 = np.array([1, 2, 3])\n",
     "\n",
@@ -456,11 +628,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "LRuyykbj5ce8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before modifying [1 2 3 4 5]\n",
+      "After modifying [2 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "var13 = np.array([1, 2, 3, 4, 5])\n",
     "\n",
@@ -482,11 +663,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "wKiN-nK07P2U"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before modifying (using view) [1 2 3 4 5]\n",
+      "After modifying (using view) [2 2 3 4 5]\n",
+      "Before modifying (using slice) [2 2 3 4 5]\n",
+      "After modifying (using slice) [2 2 4 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "var15 = np.array([1, 2, 3, 4, 5])\n",
     "\n",
@@ -514,11 +706,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "id": "Y5vKaBkk87Bp"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before modifying (using copy) [1 2 3 4 5]\n",
+      "After modifying (using copy) [1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "var18 = np.array([1, 2, 3, 4, 5])\n",
     "\n",
@@ -542,11 +743,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "id": "6pb3JQWVujSr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n",
+      "(1, 5)\n",
+      "(1, 1, 5)\n",
+      "(5, 1)\n",
+      "(1, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "var20 = np.array([1, 2, 3, 4, 5])\n",
     "print(var20.shape)\n",
@@ -580,11 +793,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "8c8Rza6BJ3Eq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.2 2.3 4. ]\n",
+      " [1.2 3.4 5.2]\n",
+      " [0.  1.  1.3]\n",
+      " [0.  1.  0.2]]\n",
+      "[[ 2.4  4.6  8. ]\n",
+      " [ 2.4  6.8 10.4]\n",
+      " [ 0.   2.   2.6]\n",
+      " [ 0.   2.   0.4]]\n",
+      "[[2.2 2.3 5. ]\n",
+      " [2.2 3.4 6.2]\n",
+      " [1.  1.  2.3]\n",
+      " [1.  1.  1.2]]\n"
+     ]
+    }
+   ],
    "source": [
     "var20 = np.array([[1.2, 2.3, 4.0],\n",
     "                  [1.2, 3.4, 5.2],\n",
@@ -611,11 +843,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "id": "T0nzFs-8WT3n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5        3.26666667 0.76666667 0.4       ]\n",
+      "[0.6   1.925 2.675]\n",
+      "1.7333333333333332\n"
+     ]
+    }
+   ],
    "source": [
     "var21 = np.array([[1.2, 2.3, 4.0],\n",
     "                  [1.2, 3.4, 5.2],\n",
@@ -623,11 +865,11 @@
     "                  [0.0, 1.0, 2e-1]])\n",
     "\n",
     "# compute row wise mean\n",
-    "var21_mean =                    # code fill up\n",
+    "var21_mean = np.mean(var21, axis = 1)                    # code fill up\n",
     "print(var21_mean)\n",
     "\n",
     "# compute column wise mean\n",
-    "var21_mean_clm =                # code fill up\n",
+    "var21_mean_clm = np.mean(var21, axis = 0)             # code fill up\n",
     "print(var21_mean_clm)\n",
     "\n",
     "# do row wise mean subtraction and column wise mean subtraction\n",
@@ -637,6 +879,9 @@
     "\n",
     "# how do we normalize the entire array using the global mean?\n",
     "# solution\n",
+    "\n",
+    "global_mean = np.mean(var21)\n",
+    "print(global_mean)\n",
     "\n",
     "\n"
    ]
@@ -687,7 +932,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -701,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
